feat: add swagger for redirect api
